quick_tests/cases/pass/p01_print_literals.kdx
function main() -> int {
    println("Salut");
    println("KodPix");
    return 0;
}
