quick_tests/cases/fail/f03_unclosed_call_paren.kdx
function main() -> int {
    println("oops";
    return 0;
}
